--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
 .menu ul li ul li {
     width: 100%;
 }
-.down-img {
+/* .down-img {
     display: flex;
     align-items: center;
     justify-content: right;
@@ -86,6 +86,49 @@ body {
 .down-img:hover {
     background-color: #2c71b8;
     color: white;
+} */
+.arrow-8 {
+    position: relative;
+    width: 10px;
+    height: 10px;
+    margin: 10px auto 10px auto;
+    float: right;
+}
+/* .arrow-8:hover{
+    background-color: #2c71b8;
+    color: white;
+} */
+.arrow-8:before,
+.arrow-8:after {
+    content: '';
+    position: absolute;
+    box-sizing: border-box;
+    width: 80%;
+    height: 80%;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+    animation: arrow-8 2s linear infinite;
+    
+}
+.arrow-8:after {
+    animation: arrow-8 2s linear infinite -1.5s;
+}
+    @keyframes arrow-8 {
+    0% {
+    opacity: 0;
+    transform: translate(0, -53px) rotate(-45deg);
+    }
+    20%, 90% {
+    opacity: 0;
+    }
+    40% {
+    opacity: 1; 
+    transform: translate(0, 0) rotate(-45deg);
+    }
+    100% {
+    opacity: 0;
+    transform: translate(0, 53px) rotate(-45deg);
+    }
 }
 .down {
     position: relative;
@@ -139,7 +182,6 @@ body {
 }
 .search-btn {
     border: none;
-    
 }
 .search-image {
     display: flex;
@@ -154,7 +196,6 @@ body {
    height: 40px;
    display: inline-flex;
    background-color: white;
-   
    justify-content: space-between;
    align-items: center;
    overflow: hidden;
@@ -163,4 +204,298 @@ body {
     display: flex;
     align-items: center;
     
+}
+
+.main p {
+    height: 48px;
+    text-decoration: none;
+    color: white;
+    margin: 0;
+} 
+.main {
+    background-color: rgba(255, 255, 255, 0.20);
+    width: 100%;
+    height: 850px;
+    /* border-top: 200px;
+    border-width: 200px;  */
+    overflow: hidden;
+    max-width: 270px;
+    max-height: 850px; 
+    padding-top: 25px;
+    /* top: 30px; */
+    left: 134px;
+    position: relative;
+    left: 140px;
+    /* float: left;
+    display: block; */
+} 
+.devace {
+    color: white;
+    text-align: justify
+}
+.submit {
+    background-color: #2c71b8;
+    color: white;
+    width: 212px;
+    height: 40px;
+    align-items: center;
+    margin: 0 auto;
+    display: block;
+}
+.type-txt {
+    font-weight: bold;
+}
+.footer {
+    position: relative;
+    width: 85%;
+    left: 440px;
+    top: -820px;
+}
+.footer h1 {
+    color: white;
+    font-size:50px;
+    font-weight: bold;
+    text-align: left;
+}
+/* .menu-sorting {
+    display: flex;
+}
+.menudown {
+    width: 25%;
+    border-left: 1px solid #2c71b8;
+}
+.menudown :last-child{
+    border-right: 1px solid #2c71b8;
+}
+.menu-sorting a{
+    display: block;
+    height: 50px;
+    text-decoration: none;
+    color: #ffffff;
+    text-align: center;
+    line-height:  50px;
+    font-size: 21px;
+}
+.menu-sorting a:hover {
+    background-color: #2c71b8;
+    color: white;
+}
+.menudown  {
+    position: relative;
+    float: left;
+}
+.menudown a:hover {
+    background-color: white;
+    color: #2c71b8;
+}
+.menudown {
+    position: absolute;
+    left: 0;
+    width: 100px;
+    background-color: #2c71b8;
+}
+.menudown {
+    width: 100%;
+} */
+.menu-clearfix {
+    list-style-type: none;
+    position: relative;
+    left: 640px;
+    top: -60px;
+}
+.menu-clearfix {
+    display: flex;
+}
+.menu-clearfix li {
+    width: 250px;
+    margin: 15px;
+    float: left;
+    position: relative;
+    list-style: none;
+}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+} 
+.menu-clearfix a {
+    display: block;
+    height: 40px;
+    background-color: #073c70;
+    color: white;
+    text-decoration: none;
+    border: 1px solid #073c70;
+    text-align: center;
+    line-height: 40px;
+    /* border-radius: 5px; */
+    /* text-transform: lowercase; */
+    
+}
+.menu-clearfix a:hover {
+    color: black;
+    background-color: white;
+}
+
+.menu-clearfix ul{
+    position: absolute;
+    left: 0;
+    top: 100%;
+    display: none;
+    padding: 0;
+}
+.menu-clearfix li:hover ul {
+    display: block;
+    
+}
+.arow-8 {
+    position: relative;
+    width: 10px;
+    height: 10px;
+    margin: 10px auto 10px auto;
+    float: right;
+}
+/* .arow-8:hover{
+    background-color: #2c71b8;
+    color: white;
+} */
+.arow-8:before,
+.arow-8:after {
+    content: '';
+    position: absolute;
+    box-sizing: border-box;
+    width: 60%;
+    height: 60%;
+    border-left: 2px solid rgb(255, 255, 255);
+    border-bottom: 2px solid rgb(255, 255, 255);
+    animation: arrow-8 2s linear infinite;
+    
+}
+.arow-8:after {
+    animation: arrow-8 2s linear infinite -1.5s;
+}
+    @keyframes arrow-8 {
+    0% {
+    opacity: 0;
+    transform: translate(0, -53px) rotate(-45deg);
+    }
+    30%, 70% {
+    opacity: 0;
+    }
+    40% {
+    opacity: 1; 
+    transform: translate(0, 0) rotate(-45deg);
+    }
+    100% {
+    opacity: 0;
+    transform: translate(0, 53px) rotate(-45deg);
+    }
+}
+/* .case {
+    width: 270px;
+    height: 650px;
+    display: flex;
+}
+.case-img {
+    background-color: white;
+    width: 270px;
+    height: 150px;
+} */
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+  
+.column {
+    float: left;
+    width: 80%;
+    margin-bottom: 16px;
+    padding: 0 25px;
+    height: 650px;
+    width: 270px;
+    display: block;
+}
+  
+@media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+}
+  
+.card {
+    box-shadow: 0 4px 8px 0 rgba(7, 64, 117, 0.2);
+}
+  
+.contain {
+    padding: 0 8px;
+    color: white;
+}
+  
+.contain::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+  
+.title {
+    color: grey;
+}
+  
+.button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 14px;
+    color: white;
+    background-color: #1b5a99;
+    text-align: center;
+    cursor: pointer;
+    width: 230px;
+    margin-top: 20px;
+    font-weight: bold;
+}
+  
+.button:hover {
+    background-color: #555;
+}
+.imgcard {
+    background-color: white;
+    /* position: relative;
+    left: 70px; */
+    width: 100%;
+    
+}
+.typetxt {
+    font-weight: bold;
+    font-size:170%;
+    margin-top: 10px;
+}
+.Lorem {
+    margin-top: 10px;
+    font-size: 130%;
+
+}
+.type-txt- {
+    color: white;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 120%;
+}
+.price {
+    font-weight: bold;
+    font-size:290%;
+    position: relative;
+    left: 30%;
+}
+.button-add{
+    border: none;
+    color: white;
+    background-color:rgba(255, 255, 255, 0.20) ;
+    outline: 0;
+    display: inline-block;
+    padding: 14px;
+    text-align: center;
+    cursor: pointer;
+    width: 230px;
+    margin-top: 20px;
+    font-weight: bold;
 }
